--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,24 +1,33 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '11.0'
+platform :ios, '10.0'
 
-target 'agrotools' do
-  use_unimodules!
+target 'quizagrotools' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  # Uncomment the code below to enable Flipper.
+  target 'quizagrotoolsTests' do
+    inherit! :complete
+    # Pods for testing
+  end
+
+  # Enables Flipper.
   #
-  # You should not install Flipper in CI environments when creating release
-  # builds, this will lead to significantly slower build times.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work.
-  #
-  #  use_flipper!
-  #  post_install do |installer|
-  #    flipper_post_install(installer)
-  #  end
+  # Note that if you have use_frameworks! enabled, Flipper will not work and
+  # you should disable these next few lines.
+  use_flipper!
+  post_install do |installer|
+    flipper_post_install(installer)
+  end
+end
+
+target 'quizagrotools-tvOS' do
+  # Pods for quizagrotools-tvOS
+
+  target 'quizagrotools-tvOSTests' do
+    inherit! :search_paths
+    # Pods for testing
+  end
 end
