--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -217,7 +217,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'Feather.ttf', 'MaterialCommunityIcons.ttf' ] // Name of the font files you want to copy
+    iconFontNames: [ 'Feather.ttf', 'MaterialIcons.ttf', 'MaterialCommunityIcons.ttf' ] // Name of the font files you want to copy
 ]
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
